fixed an issue where the screen was jumping when the cursor was hovering over the footer button as the bottom margins were different so I applied the same margins and the problem was fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,24 +77,24 @@ body {
     padding: 7px 7px;
     display: flex;
     margin-top: 20px;
+    margin-bottom: 20px;
     background-color: #fff;
     color: #be962a;
     border: 4px solid #be962a;
     border-radius: 25%;
     font-size: 1em;
     font-weight: 600;
-    text-decoration: none;
 }
 
 .enquire-button:hover {
     margin: 0 auto;
     display: flex;
     margin-top: 20px;
+    margin-bottom: 20px;
     background-color: #fff;
     color:#196076;
     border: 4px solid #196076;
     border-radius: 25%;
-    text-decoration: none;
 }
 
 #hero-image-section {
